# vulkan_testbed

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_shaders.bat  gen_vs2017_x64.bat  gen_vs2019_x64.bat
Source/: AccelerationStructure.cpp  AccelerationStructure.h  App.cpp  App.h  Camera.cpp  Camera.h  GltfModel.cpp  GltfModel.h  Main.cpp  RenderAtmosphere.cpp  RenderAtmosphere.h  RenderContext.h  RenderImGui.cpp  RenderImGui.h  RenderModel.cpp  RenderModel.h  RenderMotion.cpp  RenderMotion.h  RenderPostProcess.cpp  RenderPostProcess.h  RenderRayTracedAO.cpp  RenderRayTracedAO.h  RenderRayTracedShadows.cpp  RenderRayTracedShadows.h  RenderSSAO.cpp  RenderSSAO.h  Vk.cpp  Vk.h  VkTexture.cpp  VkTexture.h  VkUtil.cpp  VkUtil.h
Source/Shaders/: ACES.glsl  AO.rchit  AO.rgen  AO.rmiss  AOFilter.comp  AtmosphereCommon.glsl  AtmospherePrecomputeAmbientLightLUT.comp  AtmospherePrecomputeDirectionalLightLUT.comp  AtmospherePrecomputeSkyLUT.comp  AtmosphereSky.frag  AtmosphereSky.vert  ImGui.frag  ImGui.vert  ModelColor.frag  ModelColor.vert  ModelDepth.frag  ModelDepth.vert  MotionGenerate.comp  PostProcessDebug.frag  PostProcessTemporalBlend.comp  PostProcessTemporalResolve.comp  PostProcessToneMapping.frag  PostProcessToneMapping.vert  SSAOBlur.comp  SSAOGenerate.comp  Shadows.rahit  Shadows.rgen  Shadows.rmiss  ShadowsClear.comp  ShadowsFilter.comp  ShadowsReproject.comp  ShadowsResolve.comp
Tools/ShaderCompiler/: CMakeLists.txt
Tools/ShaderCompiler/Source/: Main.cpp
